<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtID"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/edtIdText"
        />


    <EditText
        android:id="@+id/edtValue"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/edtGenre"
        />

    <EditText
        android:id="@+id/edtValueChange"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/edtNombre"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/update_artist"
        android:onClick="updateArtist" />

    <Button
        android:id="@+id/btnAddArtist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_artist"
        android:onClick="createArtist" />

    <Button
        android:id="@+id/btnGetArtist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/get_artist"
        android:onClick="getArtist" />

    <Button
        android:id="@+id/btnDeleteArtist"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/delete_artist"
        android:onClick="deleteArtist" />

    <ListView
        android:id="@+id/lstArtist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
